--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
- {
+{
   "singleQuote": true,
-  "trailingComma": 'all',
-  "allowParens": 'avoid',
+  "trailingComma": "all",
+  "allowParens": "avoid",
+  "endOfLine": "auto"
 }
